--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,4 +6,4 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redistogo:4c6cf2aa44633695bef0b8dd073556f8@greeneye.redistogo.com:11098/
