--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,4 +6,4 @@ test:
 
 production:
   adapter: redis
-  url: redis://redistogo:49c69aba81a5106c22ae683bb35558ab@greeneye.redistogo.com:11193/
+  url: <%= ENV["REDISTOGO_URL"] %>
